Add dummy library and playground application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "my-library": [
+        "dist/my-library/my-library",
+        "dist/my-library"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
